--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<shiro.version>1.4.1</shiro.version>
 		<druid.version>1.1.17</druid.version>
 		<mybatis.version>3.4.4</mybatis.version>
+		<mybatis-spring.version>1.3.3</mybatis-spring.version>
 		<tk.mybatis.version>3.4.3</tk.mybatis.version>
 		<fastjson.version>1.2.40</fastjson.version>
 		<hutool.version>4.3.2</hutool.version>
@@ -68,6 +69,11 @@
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
 			<version>${mybatis.version}</version>
+		</dependency>
+		<dependency>
+		  <groupId>org.mybatis</groupId>
+		  <artifactId>mybatis-spring</artifactId>
+		  <version>${mybatis-spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>tk.mybatis</groupId>
