--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<spring.version>4.3.25.RELEASE</spring.version>
 		<shiro.version>1.4.1</shiro.version>
+		<jjwt.version>0.9.1</jjwt.version>
 		<druid.version>1.1.17</druid.version>
 		<mybatis.version>3.4.4</mybatis.version>
 		<mybatis-spring.version>1.3.3</mybatis-spring.version>
@@ -86,6 +87,13 @@
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-spring</artifactId>
 			<version>${shiro.version}</version>
+		</dependency>
+		
+		<!-- jjwt -->
+		<dependency>
+		  <groupId>io.jsonwebtoken</groupId>
+		  <artifactId>jjwt</artifactId>
+		  <version>${jjwt.version}</version>
 		</dependency>
 
 		<!-- fastjson -->
