--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,7 @@
                         <version>2.2.1</version>
                         <executions>
                             <execution>
+                            	<id>attach-sources</id>
                                 <phase>package</phase>
                                 <goals>
                                     <goal>jar-no-fork</goal>
@@ -244,6 +245,7 @@
                         <version>2.9.1</version>
                         <executions>
                             <execution>
+                            	<id>attach-javadocs</id>
                                 <phase>package</phase>
                                 <goals>
                                     <goal>jar</goal>
@@ -258,6 +260,7 @@
                         <version>1.6</version>
                         <executions>
                             <execution>
+                            	<id>sign-artifacts</id>
                                 <phase>verify</phase>
                                 <goals>
                                     <goal>sign</goal>
@@ -265,6 +268,24 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <!-- staging puglin -->
+                    <plugin>
+		                <groupId>org.sonatype.plugins</groupId>
+		                <artifactId>nexus-staging-maven-plugin</artifactId>
+		                <version>1.6.7</version>
+		                <extensions>true</extensions>
+		                <configuration>
+		                    <serverId>oss</serverId>
+		                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+		                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+		                </configuration>
+		            </plugin>
+		            <!-- release plugin -->
+		            <plugin>
+		                <groupId>org.apache.maven.plugins</groupId>
+		                <artifactId>maven-release-plugin</artifactId>
+		                <version>2.4.2</version>
+		            </plugin>
                 </plugins>
             </build>
             <distributionManagement>
